--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ anyhow = "1.0.34"
 env_logger = "0.11.3"
 log = "0.4.11"
 ldap3 = "0.11.4"
+itertools = "0.13.0"
 rpassword = "7.3.1"
 serde = { version = "1.0.117", features = ["derive"] }
 serde_json = "1.0.59"
